--- a/kaggle_notebook.ipynb
+++ b/kaggle_notebook.ipynb
@@ -1,36 +1,119 @@
-{
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "be943ecf",
-   "metadata": {},
-   "source": [
-    "# RAKSHAK AI — Kaggle Notebook (Option B)\n",
-    "\n",
-    "Offline demo; mocked Gemini outputs. See project_writeup.md and README."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "addab3df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('This is a placeholder for the full Option-B notebook. Open the full repo for the complete notebook.')"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+import json, time, random
+
+class Logger:
+    def info(self,msg):
+        print(msg)
+logger = Logger()
+
+class CameraTool:
+    def capture(self):
+        return "frame_001.jpg"
+
+class RiskTool:
+    def get_weather(self):
+        return random.choice(["rain","clear","fog"])
+
+class OBDTool:
+    def read(self):
+        return {"speed":60,"rpm":1500,"tire":30,"brake_flag":0}
+
+def push_alert(msg):
+    print("[ALERT]",msg)
+
+class MemoryBank:
+    def __init__(self):
+        self.db={"hotspots":[],"trips":[]}
+    def save_hotspot(self,loc,score):
+        self.db["hotspots"].append({"loc":loc,"score":score})
+    def save_trip(self,log):
+        self.db["trips"].append(log)
+    def export(self):
+        print(json.dumps(self.db,indent=2))
+
+class VisionAgent:
+    def __init__(self):
+        self.camera=CameraTool()
+    def analyze(self,path):
+        obs={"drowsy_score":random.uniform(0,1),
+             "phone_detected":random.choice([True,False]),
+             "lane_departure":random.choice([True,False]),
+             "nearby_vehicle":random.choice([True,False])}
+        return obs
+
+class DriverStateAgent:
+    def infer(self,vision,obd):
+        if vision["drowsy_score"]>0.6:
+            return "DROWSY"
+        if vision["phone_detected"]:
+            return "DISTRACTED"
+        if obd["brake_flag"]==1:
+            return "MECHANICAL_RISK"
+        return "ALERT"
+
+class VehicleHealthAgent:
+    def analyze(self,obd):
+        issues=[]
+        if obd["tire"]<28:
+            issues.append("LOW_TIRE")
+        if obd["brake_flag"]==1:
+            issues.append("BRAKE_FAILURE")
+        return issues
+
+class RiskAgent:
+    def __init__(self):
+        self.risk_tool=RiskTool()
+    def compute(self,vision,driver):
+        weather=self.risk_tool.get_weather()
+        score=20
+        if driver!="ALERT":
+            score+=40
+        if vision["nearby_vehicle"]:
+            score+=20
+        if weather!="clear":
+            score+=20
+        return score
+
+class GuardianAgent:
+    def __init__(self,mem):
+        self.mem=mem
+        self.logs=[]
+        self.running=False
+    def start(self,steps=5):
+        self.running=True
+        for i in range(steps):
+            if not self.running:
+                break
+            self.logs.append("tick_"+str(i))
+            time.sleep(0.1)
+        self.mem.save_trip(self.logs)
+        return self.logs
+    def stop(self):
+        self.running=False
+
+vision=VisionAgent()
+driver_state=DriverStateAgent()
+vehicle_health=VehicleHealthAgent()
+risk_agent=RiskAgent()
+memory=MemoryBank()
+guardian=GuardianAgent(memory)
+obd=OBDTool()
+
+frame=vision.camera.capture()
+vision_obs=vision.analyze(frame)
+obd_obs=obd.read()
+state=driver_state.infer(vision_obs,obd_obs)
+health=vehicle_health.analyze(obd_obs)
+risk=risk_agent.compute(vision_obs,state)
+
+print("VISION:",vision_obs)
+print("OBD:",obd_obs)
+print("DRIVER_STATE:",state)
+print("VEHICLE_ISSUES:",health)
+print("RISK_SCORE:",risk)
+
+if risk>70:
+    push_alert("High accident risk detected. Avoid route.")
+    memory.save_hotspot("loc_1",risk)
+
+guardian.start(steps=5)
+memory.export()
